--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -29,7 +29,7 @@
             </ion-item>
         </ion-list>
         <div ng-if="showInfiniteBl">
-            <div class="text-center">
+            <div class="text-center margin-top-30">
                 <ion-spinner icon="spiral"></ion-spinner>
                 <p ng-if="orders.length > 0">มีอีก {{leftMoreBl}}</p>
             </div>
