--- a/www/templates/listfriend.html
+++ b/www/templates/listfriend.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-            <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
+            <input type="text" class="form-control width-100" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
         </div>
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="account in accounts | filter: {_id : '!'+user._id} |filter:topsearch"
