--- a/www/templates/listreceived.html
+++ b/www/templates/listreceived.html
@@ -29,7 +29,7 @@
         </div>
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-            <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
+            <input type="text" class="form-control width-100" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
         </div>
 
         <!--<ion-nav-buttons side="primary">
