change btn filter and close chat indetail

--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -1,6 +1,6 @@
 <ion-view ng-init="init()" view-title="งานใหม่" cache-view="false">
     <ion-nav-buttons side="right">
-      <a class="button button-icon icon ion-search" ng-click="openFilter($event)"></a>
+      <a class="button button-icon icon ion-chevron-down" ng-click="openFilter($event)"></a>
     </ion-nav-buttons>
   <ion-content>
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
