--- a/www/templates/user-profile-detailnew.html
+++ b/www/templates/user-profile-detailnew.html
@@ -16,11 +16,11 @@
 
                 <div class="list card">
                     <div class="row">
-                        <div class="col">
+                        <!--<div class="col">
                             <a class="item item-icon-left" ng-click="gotoChat4(data.user)">
                                 <i class="icon ion-ios-chatbubble"></i> พูดคุย
                             </a>
-                        </div>
+                        </div>-->
                         <!--{{data.shipping}}-->
                         <div class="col">
                             <a ng-click="tel('{{data.shipping.tel}}')" class="item item-icon-left">
