read badge when accept ar and close chat

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -27,11 +27,11 @@ navigation history that also transitions its views in and out.
   </div>
 
   <!-- chat -->
-  <div>
+  <!--<div>
     <ion-tab title="สนทนา" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/app/tab/chat">
       <ion-nav-view name="tab-chat"></ion-nav-view>
     </ion-tab>
-  </div>
+  </div>-->
 
   <!-- More Tab -->
   <!--<ion-tab title="อื่นๆ" icon-off="ion-ios-more-outline" icon-on="ion-ios-more" href="#/app/tab/more">
