bl cache-view false

--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -1,4 +1,4 @@
-<ion-view view-title="บิลลอย" ng-init="initBl()">
+<ion-view view-title="บิลลอย" cache-view="false" ng-init="initBl()">
     <ion-nav-buttons side="right">
         <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
     </ion-nav-buttons>
